# gallery

./: .gitignore  Cargo.toml  README.md  build.rs  file.svgz  linker.xml  shell.nix
.devcontainer/: Dockerfile  README  devcontainer.json
.devcontainer/cmd/: .bash
src/: .main.rs.swo  .main.rs.swp  Cargo.toml  cocoa.rs  encoder.rs  image_handler.rs  init.rs  macos_menu.rs  main.cpp  main.rs  settings.rs
src-piet/: Cargo.toml
src-piet/src/: settings.rs
src-skia/: .copilotignore  Cargo.toml  style.toml
src-skia/src/: fun.rs  main.rs
src-skia/src/.scripts/: fun.rs
src/app/: mod.rs
src/image/: encoder.rs  heif.cpp  mod.rs
src/linux/: mod.rs
src/mac/: mod.rs  ui.swift
src/src/: main.rs
src/tmp/: fuck.rs
