[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
dirs = "4.0"
if_empty = "0.3.0"
image = "0.24"
#objc = "0.2"
#cocoa = "0.25"
#raw-window-handle = "0.4"
resvg = "0.29"
tiny-skia = "0.8.0"

[dependencies.druid]
version = "0.8.3"
features = ["im", "svg", "image"]
